--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-660.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-165.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-153.2KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇨🇳 中国-188.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-380.3KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-875.2KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-682.2KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.33MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-646.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-188.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-2.68MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇬🇧 英国-387.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-912.1KB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-871.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65081, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-387.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-912.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-387.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-912.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-387.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-912.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-387.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-912.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-387.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-912.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-387.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-912.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-660.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-875.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-682.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-646.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-387.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-912.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-871.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
