--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
-  - {name: 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-2.37MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.53MB/s(Youtube:不良林), server: 36.134.154.119, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65081, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-681.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇭🇰 香港-381.4KB/s(Youtube:不良林), server: 20.205.115.140, port: 10000, type: vmess, uuid: de4ceb36-b708-4658-81b2-2f2612e39a23, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.205.115.140}}
-  - {name: 🇸🇬 新加坡-2.00MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1000.6KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.98MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-2.47MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-164.3KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇨🇳 中国-2.20MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-507.4KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇸🇬 新加坡-2.13MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-681.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-381.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1000.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-507.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-681.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-381.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1000.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-507.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-681.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-381.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1000.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-507.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-381.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-681.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-381.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1000.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-507.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-681.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-381.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1000.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-507.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-681.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-381.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1000.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-507.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-681.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-381.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1000.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-507.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
